--- a/app/src/main/res/layout/activity_course_main_choose.xml
+++ b/app/src/main/res/layout/activity_course_main_choose.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".view.activity.CourseList.ChooseMainCourseActivity">
+    tools:context=".view.activity.courseList.ChooseMainCourseActivity">
 
     <com.shg.keyebang.view.general.TitleBarLayout
         android:id="@+id/chooseCourseBar"
