--- a/app/src/main/res/layout/activity_profile_update_personal_info.xml
+++ b/app/src/main/res/layout/activity_profile_update_personal_info.xml
@@ -14,7 +14,7 @@
         app:layout_constraintRight_toRightOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/signUpTitleBg"
+            android:id="@+id/updateTitleBg"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
@@ -23,7 +23,7 @@
             android:layout_marginTop="40dp">
 
             <ImageView
-                android:id="@+id/delete"
+                android:id="@+id/close"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 app:layout_constraintTop_toTopOf="parent"
@@ -36,7 +36,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/signUpTitle"
+                android:text="更改你的个人信息"
                 android:textColor="@color/textColor"
                 android:textSize="18sp"
                 android:textStyle="bold"
@@ -53,7 +53,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
-            app:layout_constraintTop_toBottomOf="@id/signUpTitleBg">
+            app:layout_constraintTop_toBottomOf="@id/updateTitleBg">
 
             <TextView
                 android:id="@+id/nicknameHint"
@@ -63,7 +63,7 @@
                 android:text="你的昵称" />
 
             <EditText
-                android:id="@+id/signUpNickname"
+                android:id="@+id/updateNickname"
                 style="@style/accountEditText"
                 app:layout_constraintTop_toBottomOf="@id/nicknameHint"
                 app:layout_constraintLeft_toLeftOf="parent"
@@ -72,32 +72,15 @@
                 android:inputType="text" />
 
             <TextView
-                android:id="@+id/passwordHint"
-                style="@style/accountHint"
-                app:layout_constraintTop_toBottomOf="@id/signUpNickname"
-                app:layout_constraintLeft_toLeftOf="parent"
-                android:layout_marginTop="12dp"
-                android:text="登录密码"/>
-
-            <EditText
-                android:id="@+id/signUpPassword"
-                style="@style/accountEditText"
-                app:layout_constraintTop_toBottomOf="@id/passwordHint"
-                app:layout_constraintLeft_toLeftOf="parent"
-                android:layout_marginTop="8dp"
-                android:paddingEnd="104dp"
-                android:inputType="textPassword" />
-
-            <TextView
                 android:id="@+id/contactHint"
                 style="@style/accountHint"
-                app:layout_constraintTop_toBottomOf="@id/signUpPassword"
+                app:layout_constraintTop_toBottomOf="@id/updateNickname"
                 app:layout_constraintLeft_toLeftOf="parent"
                 android:layout_marginTop="12dp"
                 android:text="联系方式"/>
 
             <EditText
-                android:id="@+id/signUpContact"
+                android:id="@+id/updateContact"
                 style="@style/accountEditText"
                 app:layout_constraintTop_toBottomOf="@id/contactHint"
                 app:layout_constraintLeft_toLeftOf="parent"
@@ -105,40 +88,41 @@
                 android:inputType="text"
                 android:hint="例：QQ 1234567"
                 android:textColorHint="@color/textHintColor"/>
-
+            
+            
             <TextView
                 android:id="@+id/studentMessageHint"
                 style="@style/accountHint"
-                app:layout_constraintTop_toBottomOf="@id/signUpContact"
+                app:layout_constraintTop_toBottomOf="@id/updateContact"
                 app:layout_constraintLeft_toLeftOf="parent"
                 android:layout_marginTop="40dp"
                 android:text="学生信息"
                 android:textSize="13sp"/>
-
+            
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/chooseSemesterButton"
-                android:layout_width="match_parent"
-                android:layout_height="36dp"
-                app:layout_constraintTop_toBottomOf="@id/studentMessageHint"
+            android:id="@+id/chooseSemesterButton"
+            android:layout_width="match_parent"
+            android:layout_height="36dp"
+            app:layout_constraintTop_toBottomOf="@id/studentMessageHint"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/bg_capsule_black_alpha">
+
+            <TextView
+                android:id="@+id/updateSemesterMessage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
-                android:layout_marginTop="20dp"
-                android:background="@drawable/bg_capsule_black_alpha">
+                android:layout_marginStart="18dp"
+                android:layout_marginEnd="18dp"
+                android:text="选择你的年级"
+                android:textSize="14sp"
+                android:textColor="@color/themeColorBlack"
+                android:alpha="0.25"/>
 
-                <TextView
-                    android:id="@+id/signUpSemesterMessage"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    android:layout_marginStart="18dp"
-                    android:layout_marginEnd="18dp"
-                    android:text="选择你的年级"
-                    android:textSize="14sp"
-                    android:textColor="@color/themeColorBlack"
-                    android:alpha="0.25"/>
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/chooseMajorButton"
@@ -150,7 +134,7 @@
                 android:background="@drawable/bg_capsule_black_alpha">
 
                 <TextView
-                    android:id="@+id/signUpMajorMessage"
+                    android:id="@+id/updateMajorMessage"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     app:layout_constraintTop_toTopOf="parent"
@@ -165,10 +149,12 @@
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
+
         <Button
-            android:id="@+id/signUpButton"
+            android:id="@+id/updateButton"
             style="@style/accountButton"
             android:layout_width="match_parent"
             app:layout_constraintBottom_toBottomOf="parent"
