--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -30,8 +30,7 @@
             android:layout_marginTop="48dp"
             android:textSize="20sp"
             android:textColor="@color/themeColorBlack"
-            android:textStyle="bold"
-            android:text="Profile"/>
+            android:textStyle="bold"/>
 
         <TextView
             android:id="@+id/profileSemester"
@@ -44,7 +43,6 @@
             android:textSize="16sp"
             android:textColor="@color/themeColorBlack"
             android:textStyle="bold"
-            android:text="Profile"
             android:alpha="0.6"/>
 
         <TextView
@@ -63,15 +61,27 @@
 
         <Button
             style="@style/accountButton"
+            android:id="@+id/updateInfoButton"
             android:layout_width="240dp"
             android:layout_height="40dp"
-            android:id="@+id/logout"
-            android:text="LogOut"
+            android:text="修改个人信息"
             android:layout_marginBottom="40dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:textAllCaps="false"/>
+
+        <TextView
+            android:id="@+id/logOutButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/updateInfoButton"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:text="LogOut"
+            android:textColor="@color/themeColorBlueDark"/>
+
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
